@@ -1,3 +1,8 @@
+2007-11-09  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* build/m4/shamrock/gstreamer.m4: Allow disabling of the GStreamer
+	plugin checks with --disable-gstreamer-plugins-check (BGO: #476500).
+
 2007-11-08  Aaron Bockover  <abock@gnome.org>
 
 	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellPlaybackIndicator.cs:
